<resources>
    <string name="app_name">Navigation Components</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="log_in2">Log In</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
</resources>